--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-hello world!
-my name is tian.
+GitHub Pages is designed to host your personal, organization,or project pages from a GitHub repository.
+Your site is published at http://313183373.github.io/github-pages-test/
