--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 GitHub Pages is designed to host your personal, organization,or project pages from a GitHub repository.
 Your site is published at http://313183373.github.io/github-pages-test/
+<img src="http://ww1.sinaimg.cn/large/006YM18Zgy1fzuxr9a7mbj312804ydgr.jpg"/>
